src/pages/Chat/index.css
.chat {
  width: 100vw;
  height: 100vh;
  padding: 2rem 0;
  background-color: #333;
}

.wrapper {
  width: 60%;
  height: 100%;
  justify-content: space-evenly;
  outline: 1px solid #ffffffaa;
  border-radius: 5px;
}

.back {
  position: absolute;
  left: 2rem;
  top: 2rem;
}

.chat-pane {
  width: 100%;
  height: 100%;
  overflow: scroll;
  padding: 1rem;
  background-color: rgb(51, 59, 102);
  border-radius: 5px;
}

.user-pane,
.assistant-pane {
  position: relative;
  margin-bottom: 1rem;
  width: 100%;
}

.user-pane {
  flex-direction: row-reverse;
}

.content-pane {
  width: 80%;
  padding: .5rem;
  border-radius: 5px;
  background-color: #fff;
  color: var(--primary-color);
  line-height: 1.5rem;
}

.content-pane::before {
  content: "";
  position: absolute;
  border-style: solid;
  border-width: .5rem;
}

.user-pane .content-pane::before {
  right: calc(-1rem);
  top: calc(.5rem + .25rem);
  border-color: transparent;
  border-left-color: #fff;
}

.assistant-pane .content-pane::before {
  left: calc(-1rem);
  top: calc(.5rem + .25rem);
  border-color: transparent;
  border-right-color: #fff;
}

.input-pane {
  width: 100%;
  padding: 1rem;
  display: block;
  justify-content: space-between;
  background-color: var(--primary-color);
  border-top: 1px solid #ffffffaa;
}

.user-input {
  width: 100%;
  height: 2.2rem;
  max-height: 7rem;
  overflow: scroll;
  padding: .5rem;
  font-size: 1rem;
  line-height: 1.2rem;
  background-color: rgb(51, 59, 102);
  border-radius: 5px;
  color: #fff;

  /* clear textarea style */
  /* Using 'border: none' will affect the 'scrollHeight' property, causing it not to decrease when the content decreases. */
  /* border: none; */
  outline: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
  /* remove the resize handle on the bottom right */
  resize: none; 
}

.user-input::placeholder {
  color: #aaa;
}

.user-input:hover {
  outline: 1px solid #ffffffaa;
}

.input-pane .btn {
  height: 2.2rem;
  margin-left: 1rem;
  display: flex;
  align-items: center; 
  padding: 0 2rem !important;
}

.menu {
  margin-right: 1rem;
  width: 1.75rem;
  height: 2.2rem;
}

.hamburger {
  width: 100%;
  height: 1rem;
  justify-content: space-between;
  cursor: pointer;
}

.hamburger .hamburger-line {
  width: 100%;
  height: 2px;
  background-color: #fff;
  border-radius: 5px;
  transition: .2s;
}

.hamburger.active .hamburger-line:nth-child(1) {
  transform: translateY(calc(0.5rem - 50%)) rotate(-135deg);
}

.hamburger.active .hamburger-line:nth-child(2) {
  opacity: 0;
}

.hamburger.active .hamburger-line:nth-child(3) {
  transform: translateY(calc(-0.5rem + 50%)) rotate(135deg);
}

.menu-pane {
  padding: 1rem;
  background-color: var(--primary-color);
  border-top: 1px solid #ffffffaa;
  transition: .5s;
}

.menu-pane .btn {
  width: 7rem;
  height: 2rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

